--- a/flit.ini
+++ b/flit.ini
@@ -4,4 +4,5 @@ author = Richard Cooper
 author-email = richard@richardcooper.net
 home-page = http://github.com/richardcooper
 requires = unification
+           pyparsing
 dev-requires = pytest
